--- a/src/main/resources/templates/animal_food.html
+++ b/src/main/resources/templates/animal_food.html
@@ -59,14 +59,13 @@
             border-radius: 0px 20px 20px 0px !important;
         }
 
-        /*經JS拼接的元素無法套用部分主表格樣式*/
-        /*表格奇數列背景色淺灰*/
+        /*表格奇數列背景色*/
         tr:nth-of-type(odd) {
             background-color: rgba(0, 0, 0, 0.05);
         }
 
-        /*表格偶數列背景色*/
-        /*tr:nth-child(even) {*/
+        /*!*表格偶數列背景色*!*/
+        /*tr:nth-of-type(even) {*/
         /*    background-color: rgba(0, 0, 0, 0.05);*/
         /*}*/
 
@@ -170,6 +169,7 @@
         <!-- 顯示資料內容 -->
         <div class="row ftco-animate">
             <table class="col-12 table-hover table-striped m-auto text-center font-weight-bold" id="tableAjax">
+                <tbody>
                 <tr class="h5">
                     <th>產品名稱</th>
                     <th style="width: 8%;">產地</th>
@@ -179,6 +179,7 @@
                     <th style="width: 22%;">主要原料</th>
                     <th style="width: 22%;">營養成份</th>
                 </tr>
+                </tbody>
             </table>
         </div>
         <!-- 顯示資料筆數及頁碼 -->
