--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -85,7 +85,7 @@
             padding: 0 !important;
             margin: 0 !important;
             text-align: center;
-            background-image: url('/images/_main.png') !important;
+            background-image: url('/images/_section_bg.png') !important;
             /*background-color: #81a5ff !important;*/
             /*background-clip: padding-box;*/
             /*border: 1px solid rgba(0, 0, 0, 0.15);*/
@@ -153,9 +153,8 @@
             /*top: 25%;*/
             /*left: 25%;*/
 
-            /*半透明黑色背景效果*/
-            /*background-color: black;*/
-            /*opacity: 0.5;*/
+            /*!*半透明黑色背景效果*!*/
+            /*background-color: rgba(0, 0, 0, 0.4);*/
 
             /*外框陰影效果*/
             filter: drop-shadow(2px 2px 1px black);
@@ -204,7 +203,7 @@
 <!-- 導覽列開始 -->
 <!-- 導覽列開始 -->
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light" id="ftco-navbar"
-     style="background-image: url('/images/_main.png') !important;">
+     style="background-image: url('/images/_section_bg.png') !important;">
     <div class="container">
         <a class="navbar-brand" href="/index"><span class="custom-font">浪寵尋家</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
