--- a/src/main/resources/templates/user_publish_history.html
+++ b/src/main/resources/templates/user_publish_history.html
@@ -58,14 +58,13 @@
             border-radius: 0px 20px 20px 0px !important;
         }
 
-        /*經JS拼接的元素無法套用部分主表格樣式*/
-        /*表格奇數列背景色淺灰*/
+        /*表格奇數列背景色*/
         tr:nth-of-type(odd) {
             background-color: rgba(0, 0, 0, 0.05);
         }
 
-        /*表格偶數列背景色*/
-        /*tr:nth-child(even) {*/
+        /*!*表格偶數列背景色*!*/
+        /*tr:nth-of-type(even) {*/
         /*    background-color: rgba(0, 0, 0, 0.05);*/
         /*}*/
 
