--- a/src/main/resources/templates/animal_hospital.html
+++ b/src/main/resources/templates/animal_hospital.html
@@ -58,15 +58,15 @@
             border-radius: 0px 20px 20px 0px !important;
         }
 
-        /*表格奇數列背景色淺灰*/
-        /*tr:nth-of-type(odd) {*/
+        /*表格奇數列背景色*/
+        tr:nth-of-type(odd) {
+            background-color: rgba(0, 0, 0, 0.05);
+        }
+
+        /*!*表格偶數列背景色*!*/
+        /*tr:nth-of-type(even) {*/
         /*    background-color: rgba(0, 0, 0, 0.05);*/
         /*}*/
-
-        /*表格偶數列背景色*/
-        tr:nth-child(even) {
-            background-color: rgba(0, 0, 0, 0.05) !important;
-        }
 
         /*表格欄位列背景色固定*/
         tr:first-child, table tr:first-child:hover {
@@ -160,11 +160,13 @@
         <!-- 顯示資料內容 -->
         <div class="row ftco-animate">
             <table class="col-12 table-hover table-striped m-auto text-center font-weight-bold" id="tableAjax">
-                <tr class="h5   ">
+                <tbody>
+                <tr class="h5">
                     <th style="width: 35%;">醫院名稱</th>
                     <th style="width: 15%;">電話</th>
                     <th style="">地址</th>
                 </tr>
+                </tbody>
             </table>
         </div>
         <!-- 顯示查詢資訊 -->
